Added LICENSE, .editorconfig, .gitignore

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "pcore/session",
     "type": "library",
+    "license": "MIT",
     "homepage": "https://github.com/pcore-framework/session",
     "authors": [
         {
