--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.0",
         "pcore/utils": "dev-main",
-        "pcore/config": "dev-main"
+        "pcore/redis": "dev-main"
     },
     "autoload": {
         "psr-4": {
