Added description and keywords

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,15 @@
 {
     "name": "pcore/session",
+    "description": "The session component for PCore",
     "type": "library",
     "license": "MIT",
+    "keywords": [
+        "php",
+        "pcore",
+        "pcore-framework",
+        "framework",
+        "pcore-component"
+    ],
     "homepage": "https://github.com/pcore-framework/session",
     "authors": [
         {
